# LabProgrammazione

./: BankAccount.h  CMakeLists.txt  Expense.h  Income.h  README.md  Transaction.cpp  TransactionFileManager.cpp  TransactionFileManager.h  transactions.txt
src/: BankAccount.cpp  BankAccount.h  Expense.cpp  Income.cpp  Transaction.cpp  Transaction.h  main.cpp
tests/: BankAccountBalanceTest.cpp  BankAccountFileTest.cpp  BankAccountSearchTest.cpp  BankAccountTransactionTest.cpp  CMakeLists.txt  test.cpp  test_main.cpp
